--- a/.posit/publish/deployments/deployment-SUTU.toml
+++ b/.posit/publish/deployments/deployment-SUTU.toml
@@ -11,12 +11,14 @@ id = '01995347-b373-b112-1a66-b7d742de80da'
 dashboard_url = 'https://connect.posit.cloud/jeremyallen/content/01995347-b373-b112-1a66-b7d742de80da'
 direct_url = 'https://01995347-b373-b112-1a66-b7d742de80da.share.connect.posit.cloud'
 logs_url = 'https://connect.posit.cloud/jeremyallen/content/01995347-b373-b112-1a66-b7d742de80da/history'
-deployed_at = '2025-09-16T12:11:45-04:00'
-bundle_id = '0199534b-dc33-d9d1-5180-4b32d81b086c'
+deployed_at = '2025-09-18T08:17:50-04:00'
+bundle_id = '01995cc2-6ad0-a670-bab1-fe022818fa74'
 files = [
   '.posit/publish/Political Violence in the Unit-JBLI.toml',
   '.posit/publish/deployments/deployment-SUTU.toml',
   'violence.html',
+  'violence_files/figure-html/unnamed-chunk-10-1.png',
+  'violence_files/figure-html/unnamed-chunk-10-2.png',
   'violence_files/figure-html/unnamed-chunk-7-1.png',
   'violence_files/figure-html/unnamed-chunk-8-1.png',
   'violence_files/figure-html/unnamed-chunk-9-1.png',
